[tool.poetry]
name = "nonebot-plugin-repeep"
version = "0.1.3"
description = "A plugin based on nonebot2, which is used to display the current peeping user information in QQ."
authors = ["p0ise <changelf@163.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/p0ise/nonebot-plugin-repeep"
repository = "https://github.com/p0ise/nonebot-plugin-repeep"
packages = [{include = "nonebot_plugin_repeep"}]

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0-beta.1"
user-agents = "^2.2.0"
nonebot-adapter-onebot = "^2.1.5"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"